# health-tracker-data

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: daily-pipeline.yml
src/: db_config.py  main.py
src/extract/: extract_fatsecret_api.py  extract_gsmybody_api.py
src/load/: load_fatsecret_api.py  load_gsmybody_api.py
