[project]
name = "health-tracker-data-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Enzo Muno",email = "enzomacedomuno@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "health_tracker_data_pipeline", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
